--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,18 +21,10 @@ steps:
   displayName: 'Install Node.js'
 
 - bash: |
-    /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-    echo ">>> Started xvfb"
-  displayName: Start xvfb
-  condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
-
-- bash: |
-    echo ">>> Compile vscode-test"
-    npm && npm compile
-    echo ">>> Compiled vscode-test"
-    cd sample
+    echo ">>> Compile Code"
+    npm run pretest
     echo ">>> Run sample integration test"
-    npm && npm compile && npm test
+    npm run test
   displayName: Run Tests
   env:
     DISPLAY: ':99.0'
