changed yarn to npm

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,11 +28,11 @@ steps:
 
 - bash: |
     echo ">>> Compile vscode-test"
-    yarn && yarn compile
+    npm && npm compile
     echo ">>> Compiled vscode-test"
     cd sample
     echo ">>> Run sample integration test"
-    yarn && yarn compile && yarn test
+    npm && npm compile && npm test
   displayName: Run Tests
   env:
     DISPLAY: ':99.0'
