--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
 	"name": "esp-engine",
 	"displayName": "ESP-Engine",
 	"description": "ESP-IDF Development Engine for Microsoft's Code Editor VSCode.",
-	"version": "0.2",
+	"publisher": "UtkarshBhatt",
+	"version": "0.0.1",
+	"repository": {
+		"url": "https://github.com/UtkarshBhatthere/ESP-Engine.git"
+	},
 	"engines": {
 		"vscode": "^1.36.0"
 	},
