use new unzip module

--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
 		"onCommand:esp-engine.config",
 		"onCommand:esp-engine.monitor",
 		"onLanguage:c",
-		"onLanguage:cpp"		
+		"onLanguage:cpp"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
-		"keybindings":[
+		"keybindings": [
 			{
 				"command": "esp-engine.build",
 				"key": "ctrl+shift+alt+b",
@@ -105,5 +105,11 @@
 		"typescript": "^3.3.1",
 		"tslint": "^5.12.1",
 		"vscode-test": "^1.0.2"
+	},
+	"dependencies": {
+		"@types/adm-zip": "^0.4.32",
+		"@types/unzip": "^0.1.1",
+		"adm-zip": "^0.4.13",
+		"unzip": "^0.1.11"
 	}
 }
